@@ -5,7 +5,10 @@ PHP                                                                        NEWS
   (Tony)
 - Fixed bug #40169 (CURLOPT_TCP_NODELAY only available in curl >= 7.11.2). 
   (Tony)
+- Fixed bug #40092 (chroot() doesn't clear realpath cache). (Dmitry)
 - Fixed bug #39450 (getenv() fills other super-globals). (Ilia, Tony)
+- Fixed bug #39367 (clearstatcache() doesn't clear realpath cache).
+  (j at pureftpd dot org, Dmitry)
 
 18 Jan 2007, PHP 5.2.1RC3
 - Added read-timeout context option "timeout" for HTTP streams. (Hannes,
